--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
         <p class="copyright">&copy; Copyrights 2022 All rights reserved.</p>
     </footer>
 
-
+    <ion-icon class="top-icon" name="chevron-up-outline"></ion-icon>
 
 
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
